{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Player",
            "id": "6e045d59-e3b2-4dfe-9c41-bbf9e90271ee",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "1221389a-153d-4aba-87cf-603377a2605d",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "beda39d2-0776-427a-ba1a-2b40a178d6cf",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ChargeAttack",
                    "type": "Button",
                    "id": "fcceabac-55b8-475a-a56f-bbfa39c01db4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Pause/Resume",
                    "type": "Button",
                    "id": "8e76cc6e-dc7e-42f6-aa70-02b297d66c30",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PrimaryInteraction",
                    "type": "Button",
                    "id": "bf56d179-25cd-439e-8843-625a403f793a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SecondaryInteraction",
                    "type": "Button",
                    "id": "4707ddf1-9e7e-4859-8145-8e971e0fd629",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "NextInteractable",
                    "type": "Button",
                    "id": "fa744c36-197b-4951-a90e-13f496b3bf56",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PreviousInteractable",
                    "type": "Button",
                    "id": "f41da5e5-cc4a-411b-a6dc-a3f727a2b14a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Rotate",
                    "type": "Value",
                    "id": "f1a29f0a-57f0-46fb-88bf-235392f12f91",
                    "expectedControlType": "Vector2",
                    "processors": "ScaleVector2(x=0.2,y=0.2)",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Guard",
                    "type": "Button",
                    "id": "6864dc9a-806b-4c14-a571-75cca0ee8a0c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SwitchWeapon",
                    "type": "Button",
                    "id": "f2ad83b8-d27f-41f1-9732-70cfe71f75f6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Shoot",
                    "type": "Button",
                    "id": "00616b6e-30df-45ca-a849-0fef22c79ab3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Dash",
                    "type": "Button",
                    "id": "19da8f25-1aeb-4213-b710-1e1f369a7d9a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "78a09a5d-82dd-435f-8dbd-5d0e9c65ddde",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Directions",
                    "id": "7e185370-1913-4bae-a852-af2f456acc4a",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "fd38ae07-81ca-4490-8cbd-c6649fe3e90f",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "8ae3c2eb-80d5-4b30-9c84-2c4eb9bd97e8",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "8b2b2af3-4148-4da3-8bcd-fef5a5bfa679",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "050e55de-e480-4de6-867d-18f46a8b865e",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "cfc192ca-04f4-4a64-9674-c59065631c95",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause/Resume",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1916c9f0-6a9f-4c86-8af7-f20cb3da8dcf",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryInteraction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "47d51f0a-c713-4907-8fe0-e924bffcc3f2",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SecondaryInteraction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5220e80f-f42c-40f8-8ba6-90352f26a14a",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "NextInteractable",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e82ea21f-3052-490a-a890-1ccf5e2ab41b",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PreviousInteractable",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "936f0667-836c-4736-8f1b-6f5d08f707ee",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "76ab0ddd-2cc2-459a-8dda-f071d93b645e",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Guard",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a7de3cb3-44c4-4b38-8089-608d800ca397",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChargeAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1e2f916d-d36a-4056-8e7e-05b8899ed33c",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchWeapon",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "aa9b8a90-42a8-4856-b823-32e429514ef3",
                    "path": "<Keyboard>/#(R)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Shoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "635e8908-e302-46e3-8bab-db00edfe8f17",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dash",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}